Added regex parser of result domain names. Refectoring..

--- a/GoogleRankChecker.Test/GoogleRankChecker.Test.csproj
+++ b/GoogleRankChecker.Test/GoogleRankChecker.Test.csproj
@@ -14,6 +14,10 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+    <None Update="samples/*.html" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\GoogleRankChecker\GoogleRankChecker.csproj" />
   </ItemGroup>
